Add fontawesome and custom css

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">I didn't enjoy or pursue coding in school or during college. Many years into an energy & sustainability career later I realized that was a big mistake!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">I didn't enjoy or pursue coding in school or during college. Many years into an energy consulting career later I realized that was a big mistake!</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">However, I also learned it is never too late to start! Welcome to my first attempt at a flask + bootstrap website with basic CRUD functionality.</p></div>
                 </div>
             </div>
