--- a/static/styles/mainpage.css
+++ b/static/styles/mainpage.css
@@ -11484,6 +11484,16 @@ html {
   }
 }
 
+.btn-circle.btn-lg {
+  width: 50px;
+  height: 50px;
+  text-align: center;  
+  padding: 12px 0;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
+}
+
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
