--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                    <!-- Footer Location-->
+                    <!-- Footer Backend-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Backend</h4>
                         <p class="lead mb-0">
@@ -49,7 +49,7 @@
                         <a class="btn btn-outline-light btn-circle btn-lg" href="https://www.instagram.com/axn5556/"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-circle btn-lg" href="https://www.linkedin.com/in/afaan-naqvi-30767bb/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                     </div>
-                    <!-- Footer About Text-->
+                    <!-- Footer Fronted-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">Frontend</h4>
                         <p class="lead mb-0">
