Add g-suite tracker code to github and link

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">First Site Builder Site</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Site Builder Site</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -158,8 +158,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='code.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">One of my favorite data wrangling tasks is hitting APIs with large amounts of data (usually in a pandas dataframe). My go-to recipe for chopping up the data to stay under API payload limits and also also for better troubleshooting is to recursively slice up and send sub-sets of the data to the API.</p>
-                                    <a class="btn btn-primary" href="https://www.from-nowhere.com" role="button">See Code Sample</a>
+                                    <p class="mb-4">One of my favorite data wrangling tasks is hitting APIs with large amounts of data (usually in a pandas dataframe). My go-to recipe for chopping up the data to stay under API payload limits and also for better troubleshooting is to recursively slice up and send data sub-sets to the API.</p>
+                                    <a class="btn btn-primary" href="" role="button">See Code Sample</a>
                                 </div>
                             </div>
                         </div>
@@ -187,8 +187,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='email.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Ever found yourself tracking certain text from emails in your inbox by copying/pasting them into a spreadsheet? This script could help!</p>
-                                    <a class="btn btn-primary" href="https://www.from-nowhere.com" role="button">See Code Sample</a>
+                                    <p class="mb-4">Ever found yourself tracking certain text from emails in your inbox by copying/pasting them into a spreadsheet? This script written in <a href="https://developers.google.com/apps-script">Google Apps Script</a> could help!</p>
+                                    <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/blob/main/gSuiteTracker.js" role="button">See Code Sample</a>
                                 </div>
                             </div>
                         </div>
