CRUD content rendered

--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='email.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Ever found yourself tracking certain text from emails in your inbox by copying/pasting them into a spreadsheet? This script written in <a href="https://developers.google.com/apps-script">Google Apps Script</a> could help!</p>
+                                    <p class="mb-4">Ever found yourself repeatedly extracting specific text from emails in your inbox by copy/pasting them into a tracker spreadsheet? This script written in <a href="https://developers.google.com/apps-script">Google Apps Script</a> could help!</p>
                                     <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/blob/main/gSuiteTracker.js" role="button">See Code Sample</a>
                                 </div>
                             </div>
