Static CRUD front end working and all postman apis working

--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -5,10 +5,10 @@
 <!-- Spacer-->
 <header class="masthead bg-faded">
 </header>
-<!-- Contact Section-->
+<!-- Main Section-->
 <section class="page-section" id="visitors">
     <div class="container">
-        <!-- Contact Section Heading-->
+        <!-- Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">CRUD Demo</h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
@@ -56,7 +56,7 @@
     </div>
 </section>
 <!-- Modals -->
-<!-- Add Modal -->
+<!-- Add Visitor Modal -->
 <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -100,7 +100,7 @@
     </div>
   </div>
 </div>
-<!-- Edit Modal -->
+<!-- Edit Visitor Modal -->
 <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
