--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -44,8 +44,8 @@
                         <td>{{visitor.email}}</td>
                         <td>{{visitor.phone}}</td>
                         <td>
-                            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editModal">Edit</button>
-                            <button type="button" class="btn btn-danger" onclick="return confirm('Are you sure?')">Delete</button>
+<!--                             <a href="visitor/edit/{{visitor.name}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{visitor.name}}">Edit</a>
+ -->                            <a href="/visitor/{{visitor.name}}/delete" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
                         </td>
                     </tr>
                     {%endfor%}
@@ -64,8 +64,7 @@
       </div>
       <div class="modal-body">
         <!-- Add Visitor Form -->
-        <!-- <form action="{{url_for('visitor')}}" method="POST"> -->
-        <form action="{{url_for('visitor')}}" method="POST">
+        <form action="{{url_for('add')}}" method="POST">
           <div class="mb-3">
             <label for="name" class="form-label">Visitorname</label>
             <input type="name" class="form-control" name="name" id="name" aria-describedby="emailHelp">
@@ -87,42 +86,6 @@
             <input type="phone" class="form-control" name="phone" id="phone" aria-describedby="emailHelp">
           </div>
           <button type="submit" class="btn btn-primary">Add visitor</button>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Edit Visitor Modal -->
-<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="editModalLabel">Edit Visitor Record</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <!-- Edit Visitor Form -->
-        <form action="{{url_for('visitor')}}" method="PUT">
-          <div class="mb-3">
-            <label for="first_name" class="form-label">First Name</label>
-            <input type="name" class="form-control" name="first_name" id="first_name" aria-describedby="emailHelp">
-          </div>
-          <div class="mb-3">
-            <label for="last_name" class="form-label">Last Name</label>
-            <input type="name" class="form-control" name="last_name" id="last_name" aria-describedby="emailHelp">
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp">
-          </div>
-          <div class="mb-3">
-            <label for="phone" class="form-label">Phone</label>
-            <input type="phone" class="form-control" name="phone" id="phone" aria-describedby="emailHelp">
-          </div>
-          <button type="submit" class="btn btn-primary">Edit visitor</button>
         </form>
       </div>
       <div class="modal-footer">
