Get CRUD Update working. Flake8 and refactoring

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='godaddy.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Before I advanced to creating a website with code, I played around with various website builders. This example is one using <a href="https://www.godaddy.com">godaddy.com</a> in which I share a bit about where I am from.</p>
+                                    <p class="mb-4">Before I advanced to creating a website with code, I played around with various website builders. Here is an example of one I built using using <a href="https://www.godaddy.com">godaddy.com</a></p>
                                     <a class="btn btn-primary" href="https://www.from-nowhere.com" role="button">Visit Website</a>
                                     </button>
                                 </div>
