--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -7,51 +7,87 @@
 </header>
 <!-- Main Section-->
 <section class="page-section" id="visitors">
-    <div class="container">
-        <!-- Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">CRUD Demo</h2>
-        <!-- Icon Divider-->
-        <div class="divider-custom">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-            <div class="divider-custom-line"></div>
-        </div>
-        <!-- Tables Section-->
-        <div class="row justify-content-center">
-                <div class="row bg-dark h-100">
-                    <div class="col-lg-11 my-auto">
-                        <h2 class="text-uppercase text-white mb-4">Visitors</h2>
-                    </div>
-                    <div class="col-lg my-auto">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addModal">Add</button>
-                    </div>
-                </div>
-                <!-- Visitor table -->
-                <table class="table table-light">
-                    <tr>
-                        <th>Visitorname</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Action</th>
-                    </tr>
-                    {%for visitor in visitors%}
-                    <tr>
-                        <td>{{visitor.name}}</td>
-                        <td>{{visitor.first_name}}</td>
-                        <td>{{visitor.last_name}}</td>
-                        <td>{{visitor.email}}</td>
-                        <td>{{visitor.phone}}</td>
-                        <td>
-<!--                             <a href="visitor/edit/{{visitor.name}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{visitor.name}}">Edit</a>
- -->                            <a href="/visitor/{{visitor.name}}/delete" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
-                        </td>
-                    </tr>
-                    {%endfor%}
-                </table>
-        </div>
+  <div class="container">
+    <!-- Section Heading-->
+    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">CRUD Demo</h2>
+    <!-- Icon Divider-->
+    <div class="divider-custom">
+      <div class="divider-custom-line"></div>
+      <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+      <div class="divider-custom-line"></div>
     </div>
+    <!-- Tables Section-->
+    <div class="row justify-content-center">
+      <div class="row bg-dark h-100">
+        <div class="col-lg-11 my-auto">
+          <h2 class="text-uppercase text-white mb-4">Visitors</h2>
+        </div>
+        <div class="col-lg my-auto">
+          <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addModal">Add</button>
+        </div>
+      </div>
+      <!-- Visitor table -->
+      <table class="table table-light">
+        <tr>
+          <th>User Name</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
+          <th>Phone</th>
+          <th>Action</th>
+        </tr>
+        {%for visitor in visitors%}
+        <tr>
+          <td>{{visitor.user_name}}</td>
+          <td>{{visitor.first_name}}</td>
+          <td>{{visitor.last_name}}</td>
+          <td>{{visitor.email}}</td>
+          <td>{{visitor.phone}}</td>
+          <td>
+            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editModal{{ visitor.user_name }}">Edit</button>
+            <a href="/visitor/{{visitor.user_name}}/delete" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure you want to delete {{visitor.user_name}}?')">Delete</a>
+          </td>
+        </tr>
+        <!-- Edit Visitor Modal -->
+        <div class="modal fade" id="editModal{{ visitor.user_name }}" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="editModalLabel">Edit Visitor Record For <strong>{{visitor.user_name }}</strong></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Edit Visitor Form -->
+                <form action="{{url_for('edit', user_name=visitor.user_name)}}" method="POST">
+                  <div class="mb-3">
+                    <label for="first_name" class="form-label">First Name</label>
+                    <input type="name" class="form-control" name="first_name" value="{{ visitor.first_name }}" aria-describedby="emailHelp">
+                  </div>
+                  <div class="mb-3">
+                    <label for="last_name" class="form-label">Last Name</label>
+                    <input type="name" class="form-control" name="last_name" value="{{ visitor.last_name }}" aria-describedby="emailHelp">
+                  </div>
+                  <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" name="email" value="{{ visitor.email }}" aria-describedby="emailHelp">
+                  </div>
+                  <div class="mb-3">
+                    <label for="phone" class="form-label">Phone</label>
+                    <input type="phone" class="form-control" name="phone" value="{{ visitor.phone }}" aria-describedby="emailHelp">
+                  </div>
+                  <button type="submit" class="btn btn-primary">Edit visitor</button>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              </div>
+            </div>
+          </div>
+          {%endfor%}
+        </div>
+      </table>
+    </div>
+  </div>
 </section>
 <!-- Modals -->
 <!-- Add Visitor Modal -->
@@ -66,8 +102,8 @@
         <!-- Add Visitor Form -->
         <form action="{{url_for('add')}}" method="POST">
           <div class="mb-3">
-            <label for="name" class="form-label">Visitorname</label>
-            <input type="name" class="form-control" name="name" id="name" aria-describedby="emailHelp">
+            <label for="user_name" class="form-label">Username</label>
+            <input type="name" class="form-control" name="user_name" id="user_name" aria-describedby="emailHelp">
           </div>
           <div class="mb-3">
             <label for="first_name" class="form-label">First Name</label>
@@ -94,5 +130,4 @@
     </div>
   </div>
 </div>
-
 {% endblock %}
