--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='game.png')}}" />
+                            <img class="img-fluid" src="{{url_for('static', filename='lowpolyart.png')}}" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -217,7 +217,7 @@
                                     <iframe width="420" height="315" src="https://www.youtube.com/embed/8uwRUmyTof4" frameborder="0" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">An adaptation of <a href="https://cosmiccoding.com.au/tutorials/lowpoly">this</a> python + pygame tutorial by Samuel Hinton to create a Low Poly-Art video of my father towards the end of his 3-decade long decorated commercial aviation career.</p>
-                                    <a class="btn btn-primary" href="" role="button">See Code Sample</a>
+                                    <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/blob/main/Low%20Poly%20Art.ipynb" role="button">See Code Sample</a>
                                 </div>
                             </div>
                         </div>
