--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='safe.png')}}" />
+                            <img class="img-fluid" src="{{url_for('static', filename='blackjack.png')}}" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -235,7 +235,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Coming Soon!</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Terminal Blackjack</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -243,9 +243,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='safe.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='blackjack.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">I look forward to adding more content soon. Do check back!</p>
+                                    <p class="mb-4">One of my first projects while learning python was to write an interactive blackjack game that could be played in the terminal. Check it out and let me know what you think!</p>
+                                    <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/" role="button">See Code</a>
                                 </div>
                             </div>
                         </div>
