Add blackjack git repo link

--- a/templates/index.html
+++ b/templates/index.html
@@ -246,7 +246,7 @@
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='blackjack.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">One of my first projects while learning python was to write an interactive blackjack game that could be played in the terminal. Check it out and let me know what you think!</p>
-                                    <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/" role="button">See Code</a>
+                                    <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/blob/main/blackjack.py" role="button">See Code</a>
                                 </div>
                             </div>
                         </div>
