--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='code.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">One of my favorite data wrangling tasks is hitting APIs with large amounts of data (usually in a pandas dataframe). My go-to recipe for chopping up the data to stay under API payload limits and also for better troubleshooting is to recursively slice up and send data sub-sets to the API.</p>
+                                    <p class="mb-4">One of my favorite data wrangling tasks is hitting APIs with large amounts of data (usually stored in pandas dataframes). My go-to recipe for chopping up the data to stay under API payload limits (and also for better troubleshooting) is to recursively slice up and send data sub-sets to the API.</p>
                                     <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/blob/main/recursive_api_call.py" role="button">See Code Sample</a>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='email.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Ever found yourself repeatedly extracting specific text from emails in your inbox by copy/pasting them into a tracker spreadsheet? This script written in <a href="https://developers.google.com/apps-script">Google Apps Script</a> could help!</p>
+                                    <p class="mb-4">Ever found yourself repeatedly extracting specific text from emails in your inbox by copy/pasting them into a tracker spreadsheet? This script I wrote in <a href="https://developers.google.com/apps-script">Google Apps Script</a> could help!</p>
                                     <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/blob/main/gSuiteTracker.js" role="button">See Code Sample</a>
                                 </div>
                             </div>
