--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Backend</h4>
                         <p class="lead mb-0">
-                            <a href="https://flask.palletsprojects.com/en/2.0.x/">Flask</a> and <a href="https://www.sqlalchemy.org/">SQLAlchemy</a>                           
+                            <a href="https://flask.palletsprojects.com/en/2.0.x/">Flask</a> + <a href="https://www.sqlalchemy.org/">SQLAlchemy</a>                           
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -54,7 +54,7 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">Frontend</h4>
                         <p class="lead mb-0">
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
+                            <a href="http://startbootstrap.com">Start Bootstrap</a> + <a href="https://www.pexels.com/">Pexels</a>
                         </p>
                     </div>
                 </div>
