--- a/templates/index.html
+++ b/templates/index.html
@@ -216,7 +216,7 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="420" height="315" src="https://www.youtube.com/embed/8uwRUmyTof4" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">An adaptation of <a href="https://cosmiccoding.com.au/tutorials/lowpoly">this</a> python + pygame tutorial by Samuel Hinton to create a Low Poly-Art video of my father towards the end of his 3-decade long decorated commercial aviation career.</p>
+                                    <p class="mb-4">An adaptation of <a href="https://cosmiccoding.com.au/tutorials/lowpoly">this</a> python + pygame tutorial by Samuel Hinton to create a Low Poly-Art video of my father towards the end of his nearly 4-decade long decorated commercial aviation career.</p>
                                     <a class="btn btn-primary" href="https://github.com/afaan5556/my_code_samples/blob/main/Low%20Poly%20Art.ipynb" role="button">See Code Sample</a>
                                 </div>
                             </div>
