--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='placeholder.png')}}" />
+                            <img class="img-fluid" src="{{url_for('static', filename='bored_ape.png')}}" />
                         </div>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Coming Soon!</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Streamlit and NFTs</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -272,9 +272,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='placeholder.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='modal_bored_ape.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">I look forward to adding more content soon. Do check back!</p>
+                                    <p class="mb-4">They say the best way to learn something new is to just dive right in. Here I am combining my complete ignorance on the Streamlit open source project and the world of NFTs with the hope of learning something along the way.</p>
+                                    <a class="btn btn-primary" href="https://share.streamlit.io/afaan5556/streamlit_nfts/main/streamlit_nfts.py" role="button">Visit the App</a>
                                 </div>
                             </div>
                         </div>
