Add map link on home page and add locations map html and route in aoo.py'

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Career 2.0 - Late Tech Pivot - Student for Life</p>
+                <p class="masthead-subheading font-weight-light mb-0">Career 2.0 - Late Tech Pivot - Student for Life - <a style="color: white" href="/where_ive_lived">Global Citizen</a></p>
             </div>
         </header>
         <!-- Portfolio Section-->
