Update styles on map page to match project bootstrap styles

--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -3,8 +3,8 @@
 {% block title %} Visitors {% endblock %}
 {% block body %}
 <!-- Spacer-->
-<header class="masthead bg-faded">
-</header>
+<div class="row example">___</div>
+<div class="row example">___</div>
 <!-- Main Section-->
 <section class="page-section" id="visitors">
   <div class="container">
