--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,8 +3,8 @@
 {% block title %} Contact {% endblock %}
 {% block body %}
 <!-- Spacer-->
-<header class="masthead bg-faded">
-</header>
+<div class="row example">___</div>
+<div class="row example">___</div>
 <!-- Contact Section-->
 <section class="page-section" id="contact">
     <div class="container">
