Update README. Add rat page and request rat scripts routes. Add rat html page. Update layout hhtml page.

--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -16,6 +16,18 @@
       <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
       <div class="divider-custom-line"></div>
     </div>
+    <!-- <div class="container align-items-center text-center mb-4"> -->
+    <div class="row">
+      <div class="col-lg-3">
+        <p></p>
+      </div>
+      <div class="col-lg-6 text-center">
+        <p><b><u>R</u></b>ead available records in the demo table below. Use the Add, Edit, or Delete buttons to <b><u>C</u></b>reate, <b><u>U</u></b>pdate or <b><u>D</u></b>estroy records.</p>
+      </div>
+      <div class="col-lg-3">
+        <p></p>
+      </div>
+    </div>
     <!-- Tables Section-->
     <div class="row justify-content-center">
       <div class="row bg-dark h-100">
