Add spacer rows in visitors, contact, and rat html pages

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,8 +3,13 @@
 {% block title %} Contact {% endblock %}
 {% block body %}
 <!-- Spacer-->
-<div class="row example">___</div>
-<div class="row example">___</div>
+<!-- Spacer-->
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
 <!-- Contact Section-->
 <section class="page-section" id="contact">
     <div class="container">
