--- a/templates/rat.html
+++ b/templates/rat.html
@@ -20,6 +20,7 @@
         </header>
         <!-- Overview Section-->
         <section class="page-section portfolio" id="portfolio">
+            <div class="row" style="color: white">_</div>
             <div class="container">
                 <!-- Overview Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Overview</h2>
