--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -3,8 +3,12 @@
 {% block title %} Visitors {% endblock %}
 {% block body %}
 <!-- Spacer-->
-<div class="row example">___</div>
-<div class="row example">___</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
+<div class="row" style="color: white">_</div>
 <!-- Main Section-->
 <section class="page-section" id="visitors">
   <div class="container">
@@ -22,7 +26,7 @@
         <p></p>
       </div>
       <div class="col-lg-6 text-center">
-        <p><b><u>R</u></b>ead available records in the demo table below. Use the Add, Edit, or Delete buttons to <b><u>C</u></b>reate, <b><u>U</u></b>pdate or <b><u>D</u></b>estroy records.</p>
+        <p><b><u>R</u></b>ead available records from the demo table below. Use the Add, Edit, or Delete buttons to <b><u>C</u></b>reate, <b><u>U</u></b>pdate or <b><u>D</u></b>estroy records.</p>
       </div>
       <div class="col-lg-3">
         <p></p>
